--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
         <header id="header" class="clearfix">
             <div class="logo">
                 <strong class="logo">
-                    <a href="#">
-                        <img src="pic/logo.png" alt="logomin">
-                    </a>
+                    <a href="#"><img src="pic/logo.png" alt="logomin"></a>
                 </strong>
             </div>
             <nav>
-                <ul class="navigation">
+                <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Portfolio</a></li>
@@ -25,42 +23,43 @@
                 </ul>
             </nav>
         </header>
-        <main id="main">
-            <div class="banner">
-                <div class="mainpic1">
-                        <div class="infocont">
-                            <h2>Content description</h2>
-                            <p>Add your description Curabitur et suscipit ipsum. Pellentesque porta interdum tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
-                        </div>
-                    <img src="pic/room.png" alt="room"></div>
-                <div>
-                    <ul>
-                        <li>
-                            <img src="pic/Themeforest.png">
-                            <h4>Buy our templates</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque turpis non turpis pellentesque bibendum malesuada ipsum convallis. Curabitur eget magna in mi varius eleifend id at metus.</p>
-                            <a href="#">Read more...</a>
-                        </li>
-                        <li>
-                            <img src="pic/Tutorials.png">
-                            <h4>Design tutorials</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque turpis non turpis pellentesque bibendum malesuada ipsum convallis. Curabitur eget magna in mi varius eleifend id at metus.</p>
-                            <a href="#">Read more...</a>
-                        </li>
-                        <li>
-                            <img src="pic/Graphicriver.png">
-                            <h4>Your choice for graphics</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque turpis non turpis pellentesque bibendum malesuada ipsum convallis. Curabitur eget magna in mi varius eleifend id at metus.</p>
-                            <a href="#">Read more...</a>
-                        </li>
-                    </ul>                    
-                </div>
+        <main id="main" class="clearfix">
+            <div class="banner"> 
+                <!-- тут был mainpic1 обернутый в banner -->
+                    <div class="infocont">
+                        <h2>Content description</h2>
+                        <p>Add your description Curabitur et suscipit ipsum. Pellentesque porta interdum tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
+                    </div>
+                <img src="pic/room.png" alt="room">
+            </div>
+<!-- mainbottom раньше цеплялся за div "banner" -->
+            <div class="mainbottom">
+                <ul>
+                    <li>
+                        <img src="pic/Themeforest.png" alt="Themeforest">
+                        <h4>Buy our templates</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque turpis non turpis pellentesque bibendum malesuada ipsum convallis. Curabitur eget magna in mi varius eleifend id at metus.</p>
+                        <a href="#">Read more...</a>
+                    </li>
+                    <li>
+                        <img src="pic/Tutorials.png" alt="Tutorials">
+                        <h4>Design tutorials</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque turpis non turpis pellentesque bibendum malesuada ipsum convallis. Curabitur eget magna in mi varius eleifend id at metus.</p>
+                        <a href="#">Read more...</a>
+                    </li>
+                    <li>
+                        <img src="pic/Graphicriver.png" alt="Graphicriver">
+                        <h4>Your choice for graphics</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque turpis non turpis pellentesque bibendum malesuada ipsum convallis. Curabitur eget magna in mi varius eleifend id at metus.</p>
+                        <a href="#">Read more...</a>
+                    </li>
+                </ul>                    
             </div>
         </main>
-        <aside id="sidebar">
+        <aside id="sidebar" class="clearfix">
             <fieldset>
-                <form action="#" method="POST">
-                    <input type="search">
+                <form action="#" method="POST" class="search">
+                    <input type="search" placeholder="search...">
                 </form>
             </fieldset>
             <h2>Latest news</h2>
@@ -75,15 +74,15 @@
                 <a href="#">Read more...</a>
             </section>
         </aside>
-        <footer id="footer">
-            <ul class="soc">
-                <li><a href="#"><img src="pic/facebook.png"></a></li>
-                <li><a href="#"><img src="pic/twitter.png"></a></li>
-                <li><a href="#"><img src="pic/linkedin.png"></a></li>
-                <li><a href="#"><img src="pic/myspace.png"></a></li>
-                <li><a href="#"><img src="pic/rss.png"></a></li>
+        <footer id="footer" class="clearfix">
+            <ul class="socials">
+                <li><a href="#" class="facebook"></a></li>
+                <li><a href="#" class="twitter"></a></li>
+                <li><a href="#" class="linkedin"></a></li>
+                <li><a href="#" class="myspace"></a></li>
+                <li><a href="#" class="rss"></a></li>
             </ul>
-            <span class="copy">Copyright &#169 2010 Minimal. All rights reserved.</span>
+            <span class="copy">Copyright &#169; 2010 Minimal. All rights reserved.</span>
         </footer>
     </div>
 </body>
