--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
        </head>
 <body>
     <div class="layout">
-        <header id="header" class="clearfix">
-            <div class="logo">
+        <header id="header">
                 <strong class="logo">
-                    <a href="#"><img src="pic/logo.png" alt="logomin"></a>
+                    <a href="#">Minimal</a>
                 </strong>
-            </div>
-            <nav>
+            <nav class="navigation">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -26,7 +24,7 @@
         <main id="main" class="clearfix">
             <div class="banner"> 
                 <!-- тут был mainpic1 обернутый в banner -->
-                    <div class="infocont">
+                    <div class="banner-content">
                         <h2>Content description</h2>
                         <p>Add your description Curabitur et suscipit ipsum. Pellentesque porta interdum tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
                     </div>
