--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <img src="pic/room.png" alt="room">
             </div>
-            <div class="mainbottom">
+            <div class="main-bottom">
                 <ul>
                     <li>
                         <img src="pic/Themeforest.png" alt="Themeforest">
