pre-finish release

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
             <fieldset>
                 <form class="search">
                     <input type="search" class="search-field" placeholder="search...">
-                    <input type="submit" class="button" value=' '> 
+                    <button class="button"></button>
                 </form>
             </fieldset>
             <h2>Latest news</h2>
-            <section class="news1">
+            <section class="news">
                 <h3>Integer vel felis at metus rhoncus</h3>
                 <p>Vestibulum vel sem nibh. Nullam ut elit eros. Donec vulputate rhoncus varius. Integer felis nisi, dictum quis pellentesque eu, tincidunt quis tortor.</p>
                 <a href="#">Read more...</a>
             </section>
-            <section class="news2">
+            <section class="news">
                 <h3>Integer vel felis at metus rhoncus</h3>
                 <p>Vestibulum vel sem nibh. Nullam ut elit eros. Donec vulputate rhoncus varius. Integer felis nisi, dictum quis pellentesque eu, tincidunt quis tortor.</p>
                 <a href="#">Read more...</a>
@@ -79,7 +79,9 @@
                 <li><a href="#" class="myspace"></a></li>
                 <li><a href="#" class="rss"></a></li>
             </ul>
-            <span class="copy">Copyright &#169; 2010 Minimal. All rights reserved.</span>
+            <div class="copyright">
+                <span class="copy">Copyright &#169; 2010 Minimal. All rights reserved.</span>
+                </div>
         </footer>
     </div>
 </body>
