--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             </section>
         </aside>
         <footer id="footer" class="clearfix">
+            <div class="wrapper">
             <ul class="socials">
                 <li><a href="#" class="facebook"></a></li>
                 <li><a href="#" class="twitter"></a></li>
@@ -79,9 +80,13 @@
                 <li><a href="#" class="myspace"></a></li>
                 <li><a href="#" class="rss"></a></li>
             </ul>
-            <div class="copyright">
+            </div>
+            <div class="wrapper2">   
+            <div class="copyright"> 
                 <span class="copy">Copyright &#169; 2010 Minimal. All rights reserved.</span>
                 </div>
+            </div>
+            </div>
         </footer>
     </div>
 </body>
