--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <main id="main" class="clearfix">
             <div class="banner"> 
                 <div class="banner-content">
-                    <h2>Content description</h2>
-                    <p>Add your description Curabitur et suscipit ipsum. Pellentesque porta interdum tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
+                    <div class="wrapper-banner">
+                        <h2>Content description</h2>
+                        <p>Add your description Curabitur et suscipit ipsum. Pellentesque porta interdum tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
+                    </div>
                 </div>
                 <img src="pic/room.png" alt="room">
             </div>
